data/derived/fa15/progs/unify/prog2046.ml.out
Characters 37-38:
  let f a x = [a]::0 in
                   ^
Error: This expression has type int but an expression was expected of type
         'a list list
